force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/Defendant_Firm_Loss_Item_Position__c.object-meta.xml
<CustomObject>
    <label>Defendant Firm - Loss Item Position</label>
    <nameField>
        <displayFormat>DF - LIP - {00000}</displayFormat>
        <label>Defendant Firm - Loss Item Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defendant Firm - Loss Item Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>