force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Arbitrator_Award__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Award__c</fullName>
    <formula>Loss_Sub_Category__r.Arbitrator_Award__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arbitrator Award</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>