force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Position__c</fullName>
    <formula>Loss_Sub_Category__r.Claimant_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>