force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Defendant_Firm_Schedule_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Schedule_of_Loss__c</fullName>
    <label>Defendant Firm - Schedule of Loss</label>
    <referenceTo>Defendant_Firm_Schedule_of_Loss__c</referenceTo>
    <relationshipLabel>Defendant Firm - Loss Item Positions</relationshipLabel>
    <relationshipName>Defendant_Firm_Loss_Item_Positions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>