force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Defendant_Position__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Position__c</fullName>
    <label>Defendant Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>