force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Loss_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Loss_Sub_Category__c</fullName>
    <label>Loss Sub Category</label>
    <referenceTo>Loss_Sub_Categories__c</referenceTo>
    <relationshipLabel>Defendant Firm - Loss Item Positions</relationshipLabel>
    <relationshipName>Defendant_Firm_Loss_Item_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>