force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Merit_Position_Amount__c.field-meta.xml
<CustomField>
    <fullName>Merit_Position_Amount__c</fullName>
    <formula>if(Arbitrator_Award__c = null,
 Loss_Sub_Category__r.Merit__r.Claimant_Position__c * Claimant_Position__c,
Loss_Sub_Category__r.Merit__r.Claimant_Position__c * Arbitrator_Award__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merit Position Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>