force-app/main/default/objects/Defendant_Firm_Loss_Item_Position__c/fields/Merit_Settled_Arbitrated__c.field-meta.xml
<CustomField>
    <fullName>Merit_Settled_Arbitrated__c</fullName>
    <formula>If(
TEXT(Loss_Sub_Category__r.Merit__r.Status__c)=&apos;Settled&apos;, Loss_Sub_Category__r.Merit__r.Claimant_Position__c,
If(
TEXT(Loss_Sub_Category__r.Merit__r.Status__c)=&apos;Arbitrated&apos;,
Loss_Sub_Category__r.Merit__r.Arbitrator_Award__c,0 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merit (Settled/Arbitrated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>